# msc_03_ap_shared

./: README.md  pyproject.toml
week_1/: activity_106_bash_python.ipynb  activity_110_string_io.ipynb  activity_112_data_structures.ipynb  activity_114_functions.ipynb  activity_116_modules_classes.ipynb
week_2/: activity_1_GradeData.xml  activity_1_RaceData.json  activity_2.ipynb  activity_2_PeopleTrainngDate_sorted.csv  activity_3.ipynb  activity_3_MissingExceptions.ipynb  activity_4.ipynb  activity_5.ipynb  activity_5_People.json  activity_5_People_my_version.json  activity_6.ipynb
